--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
 @import url("./main.css");
+h1 {
+  font-size: 4em;
+  color: var(--FontSecondaryColor);
+}
+.title {
+  font-size: 2.4em;
+  color: var(--FontPrimaryColor);
+}
 header {
   background-color: var(--Header);
   display: flex;
@@ -113,9 +121,6 @@ input.check-toggle-round-flat + label:after {
   transition: margin 0.2s;
 }
 
-input.check-toggle-round-flat:checked + label {
-}
-
 input.check-toggle-round-flat:checked + label:after {
   margin-left: 44px;
 }
@@ -146,7 +151,7 @@ header h1 {
   align-items: flex-end;
   height: 20%;
   gap: 3%;
-  margin-bottom: 30px;
+  margin-bottom: 10vh;
 }
 
 .containerMain--icon,
@@ -189,7 +194,15 @@ header h1 {
   height: 100%;
 }
 .section--main {
-  height: inherit;
+  margin-bottom: 23vh;
+}
+
+.section--Projects {
+  margin: 30% 0;
+}
+
+.section--Projects h1 {
+  padding-left: 3%;
 }
 
 .containerMain--aboutMe {
@@ -197,35 +210,160 @@ header h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 
-.containerMain--aboutMe div {
-  width: 80%;
-  background: #484a46;
-  border-radius: 14px;
+.containerMain--aboutMe .aboutMe__div {
+  min-height: 70%;
   text-shadow: rgba(0, 0, 0, 2.12) 0px 0px 2px, rgba(0, 0, 0, 0.14) 0px 2px 4px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 2px, rgba(0, 0, 0, 0.14) 0px 2px 4px;
+  background: linear-gradient(
+    180deg,
+    rgb(34, 34, 39) 1%,
+    rgb(72, 74, 70) 80%,
+    rgb(34, 34, 39) 99%
+  );
+  width: 100%;
 }
-.containerMain--aboutMe div p {
-  font-size: 1.2rem;
+.containerMain--aboutMe .aboutMe__div p {
+  font-size: 1.8rem;
   font-weight: 700;
   letter-spacing: 1.5px;
-  line-height: 3.2vh;
+  line-height: 3.8vh;
   text-transform: capitalize;
 }
 
-.containerMain--aboutMe div p,
-.containerMain--aboutMe div h1 {
-  margin: 35px;
+.containerMain--aboutMe .aboutMe__div p,
+.containerMain--aboutMe .aboutMe__div h1 {
+  padding: 3% 10%;
 }
 
 .div--project {
-  width: 80%;
+  width: 90%;
+  height: 100%;
 }
 .projects {
   width: 100%;
   display: flex;
   justify-content: center;
-  height: 40vh;
   margin-bottom: 30px;
+}
+
+.project__img {
+  height: 70%;
+  object-fit: contain;
+  padding-top: 35px;
+  display: flex;
+  justify-content: center;
+}
+.project__img img {
+  animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.div__projectContent {
+  display: flex;
+  width: 80%;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.project__info {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project__info p {
+  margin-bottom: 10px;
+  font-size: 0.9em;
+  text-align: justify;
+  line-height: 1.7rem;
+  width: 50%;
+}
+
+.projectButton {
+  background-color: var(--FontSecondaryColor);
+  border: none;
+  border-radius: 8px;
+  width: 50%;
+  height: 7vh;
+  cursor: pointer;
+  max-width: 312px;
+  min-width: 200px;
+}
+
+.projectButton:hover {
+  background-color: #e3962a;
+}
+
+.project-title {
+  font-size: 3em;
+}
+
+.link {
+  color: var(--FontSecondaryColor);
+  text-decoration: none;
+}
+
+.tilt-n-move-shaking {
+  animation: tilt-n-move-shaking 6s ease infinite;
+}
+
+.link:hover {
+  color: #e3962a;
+}
+
+.contact-platforms {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  width: auto;
+}
+
+@media screen and (max-width: 500px) {
+  .containerMain--aboutMe .aboutMe__div p {
+    font-size: 1.5rem;
+  }
+  .project__info p {
+    width: 100%;
+  }
+  .containerMain--aboutMe .aboutMe__div {
+    height: 80%;
+  }
+  .containerMain--aboutMe .aboutMe__div p,
+  .containerMain--aboutMe .aboutMe__div h1 {
+    padding: 1% 10%;
+  }
+}
+
+@keyframes tilt-n-move-shaking {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(5px, 5px);
+  }
+  50% {
+    transform: translate(0, 0);
+  }
+  75% {
+    transform: translate(-5px, 5px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
 }
