--- a/assets/css/swiper.css
+++ b/assets/css/swiper.css
@@ -11,9 +11,39 @@
   align-items: center;
 }
 
-.swiper-slide img {
+.swiper-slide img,
+.imgTemplate {
   display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 2px, rgba(0, 0, 0, 0.14) 0px 2px 4px;
+  object-fit: fill;
+  width: 600px;
+  height: 292px;
+}
+.imgTemplate {
+  background: #c48022;
+}
+.swiper-slide.swiper-slide-active {
+  width: 834px;
+  display: flex;
+  flex-direction: column;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: var(--swiper-navigation-color, #b0b0b0);
+}
+
+@media screen and (max-width: 500px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
+  }
+}
+@media screen and (max-width: 670px) {
+  .swiper-slide img,
+  .imgTemplate {
+    width: 65vw;
+    object-fit: cover;
+  }
 }
