styling(responsivity): Added some changes to the root css and the main css regarding responsivity values.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,8 @@ html {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  font-size: clamp(35px, 6vw, 45px);
+  line-height: clamp(35px, 6vw, 45px);
 }
 
 body {
