--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,17 @@
   --FontSecondaryColor: #c48022;
 }
 
+:root {
+  --size--2: clamp(0.7813rem, 0.7747rem + 0.0326vi, 0.8rem);
+  --size--1: clamp(0.9375rem, 0.9158rem + 0.1087vi, 1rem);
+  --size-0: clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);
+  --size-1: clamp(1.35rem, 1.2761rem + 0.3696vi, 1.5625rem);
+  --size-2: clamp(1.62rem, 1.5041rem + 0.5793vi, 1.9531rem);
+  --size-3: clamp(1.944rem, 1.771rem + 0.8651vi, 2.4414rem);
+  --size-4: clamp(2.3328rem, 2.0827rem + 1.2504vi, 3.0518rem);
+  --size-5: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -26,8 +37,8 @@ html {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  font-size: clamp(35px, 6vw, 45px);
-  line-height: clamp(35px, 6vw, 45px);
+  font-size: var(--size-2);
+  /* line-height: clamp(35px, 6vw, 45px); */
 }
 
 body {
@@ -36,10 +47,10 @@ body {
   font-family: "Roboto", "Poppins", "Atkinson Hyperlegible", "Work Sans",
     system-ui;
   background-color: var(--Background);
-  font-size: 12px;
+  /* font-size: 12px; */
 }
 
-@media (min-width: 300px) {
+/* @media (min-width: 300px) {
   html {
     font-size: 14px;
   }
@@ -49,4 +60,4 @@ body {
   html {
     font-size: 16px;
   }
-}
+} */
