--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ li a:hover {
   padding-top: 20px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   height: 20%;
   gap: 3%;
   margin-bottom: 10vh;
